--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,7 @@ $navbar-height: 5rem;
 $brand-color-pink: #d99e8e;
 $link: $brand-color-pink;
 $text: #dddddd;
-$column-gap: 0.1rem;
+$column-gap: 0.25rem;
 
 @import "../../node_modules/bulma/bulma";
 
