--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -1,6 +1,6 @@
-.projects-section {
-  min-width: 1024px;
-}
+// .projects-section {
+//   min-width: 1024px;
+// }
 
 .project {
   border-radius: 5px;
